Re-enable EXT_disjoint_timer_query WebGL extensions on desktop.

Site Isolation has shipped there so it is safe to expose this
extension again.

Improve the GPU test logs to include the disabled extensions and
WebGL extensions, to reduce confusion.

Bug: 820891
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I404bcab474046d90f82d9ba6d042fb3eaaf394bd
Reviewed-on: https://chromium-review.googlesource.com/1147872
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579125}
Former-commit-id: cc1732e0386125c0c3aa04690663bfb43e6d7f68