content/test/gpu/gpu_tests/gpu_process_integration_test.py
@@ -167,6 +167,17 @@ class GpuProcessIntegrationTest(gpu_integration_test.GpuIntegrationTest):
             (sys.platform.startswith('linux') and
              not self._RunningOnAndroid()))
 
+  @staticmethod
+  def _Filterer(workaround):
+    # Filter all entries starting with "disabled_extension_" and
+    # "disabled_webgl_extension_", as these are synthetic entries
+    # added to make it easier to read the logs.
+    banned_prefixes = ['disabled_extension_', 'disabled_webgl_extension_']
+    for p in banned_prefixes:
+      if workaround.startswith(p):
+        return False
+    return True
+
   def _CompareAndCaptureDriverBugWorkarounds(self):
     tab = self.tab
     if not tab.EvaluateJavaScript('chrome.gpuBenchmarking.hasGpuProcess()'):
@@ -175,14 +186,16 @@ class GpuProcessIntegrationTest(gpu_integration_test.GpuIntegrationTest):
     if not tab.EvaluateJavaScript('chrome.gpuBenchmarking.hasGpuChannel()'):
       self.fail('No GPU channel detected')
 
-    browser_list = tab.EvaluateJavaScript('GetDriverBugWorkarounds()')
-    gpu_list = tab.EvaluateJavaScript(
-      'chrome.gpuBenchmarking.getGpuDriverBugWorkarounds()')
+    browser_list = [
+      x for x in tab.EvaluateJavaScript('GetDriverBugWorkarounds()')
+      if self._Filterer(x)]
+    gpu_list = [
+      x for x in tab.EvaluateJavaScript(
+        'chrome.gpuBenchmarking.getGpuDriverBugWorkarounds()')
+      if self._Filterer(x)]
 
     diff = set(browser_list).symmetric_difference(set(gpu_list))
     if len(diff) > 0:
-      print 'Test failed. Printing page contents:'
-      print tab.EvaluateJavaScript('document.body.innerHTML')
       self.fail('Browser and GPU process list of driver bug'
                 'workarounds are not equal: %s != %s, diff: %s' %
                 (browser_list, gpu_list, list(diff)))
